--- a/projects/7-social-media/src/App.css
+++ b/projects/7-social-media/src/App.css
@@ -7,3 +7,17 @@
 .sidebar {
   min-height: 800px;
 }
+.post-card {
+  margin: 20px 30px;
+}
+.hashtag {
+  margin: -10px 5px;
+}
+.reactions {
+  margin: 10px 0 0 0;
+}
+.create-post {
+  width: 80%;
+  margin-top: 30px;
+  margin-left: 10%;
+}
